<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/signup_activity"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signup.SignupActivity">

    <TextView
        android:id="@+id/title_signup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/title_sign_up"
        android:textSize="32dp"
        android:gravity="center"
        android:layout_marginTop="52dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:textColor="@color/dark_navy"
        android:textStyle="bold"
        android:alpha="0"/>

    <TextView
        android:id="@+id/txt_name_signup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_signup"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="48dp"
        android:text="@string/name"
        android:textColor="@color/black"
        android:alpha="0"/>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_signup_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_name_signup"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="8dp"
        app:startIconDrawable="@drawable/ic_baseline_person_24"
        app:boxCornerRadiusTopStart="12dp"
        app:boxCornerRadiusBottomEnd="12dp"
        android:alpha="0">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_name_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/masukkan_nama"
            tools:ignore="SpeakableTextPresentCheck"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/txt_signup_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/txt_email"
        android:textColor="@color/black"
        app:layout_goneMarginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_signup_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.373"
        android:alpha="0"/>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_signup_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxCornerRadiusTopStart="12dp"
        app:boxCornerRadiusBottomEnd="12dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_signup_email"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:startIconDrawable="@drawable/icon_email"
        android:alpha="0">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_email_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/masukkan_email"
            android:inputType="textEmailAddress"
            tools:ignore="SpeakableTextPresentCheck"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/txt_signup_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/txt_password"
        app:layout_constraintTop_toBottomOf="@id/email_signup_layout"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="16dp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:alpha="0"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/pass_signup_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:boxCornerRadiusTopStart="12dp"
        app:boxCornerRadiusBottomEnd="12dp"
        app:passwordToggleEnabled="true"
        app:layout_constraintTop_toBottomOf="@id/txt_signup_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:startIconDrawable="@drawable/ic_lock"
        android:alpha="0">

        <com.example.submissionintermediate.CustomView.PassEditText
            android:id="@+id/edt_password_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            app:passwordToggleEnabled="true"
            tools:ignore="SpeakableTextPresentCheck"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.example.submissionintermediate.CustomView.SignupButton
        android:id="@+id/btn_signup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pass_signup_layout"
        android:layout_marginTop="18dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:alpha="0"/>

    <ProgressBar
        android:id="@+id/pb_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:attr/progressBarStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="invisible"/>

</androidx.constraintlayout.widget.ConstraintLayout>